Day3/Task3_Version3/src/eks/manifest/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apdev-app-ing
  namespace: apdev
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: apdev-app-alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/security-groups: SECURITY_GROUP_ID
    alb.ingress.kubernetes.io/healthcheck-path: /healthcheck
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '5'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '3'
    alb.ingress.kubernetes.io/healthy-threshold-count: '3'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=30
    alb.ingress.kubernetes.io/conditions.apdev-user-svc: >
      [{"field":"http-request-method","httpRequestMethodConfig":{"Values":["POST", "GET"]}}]
    alb.ingress.kubernetes.io/conditions.apdev-product-svc: >
      [{"field":"http-request-method","httpRequestMethodConfig":{"Values":["POST", "GET", "PUT"]}}]
    alb.ingress.kubernetes.io/conditions.apdev-stress-svc: >
      [{"field":"http-request-method","httpRequestMethodConfig":{"Values":["POST"]}}]
    alb.ingress.kubernetes.io/actions.response-403: >
      {"type":"fixed-response","fixedResponseConfig":{"contentType":"text/plain","statusCode":"403","messageBody":"Restrict access to api"}}
    alb.ingress.kubernetes.io/actions.response-404: >
      {"type":"fixed-response","fixedResponseConfig":{"contentType":"text/plain","statusCode":"404","messageBody":"Contents Not Found"}}
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /v1/user
        pathType: Prefix
        backend:
          service:
            name: apdev-user-svc
            port:
              number: 8080
      - path: /v1/product
        pathType: Prefix
        backend:
          service:
            name: apdev-product-svc
            port:
              number: 8080
      - path: /v1/stress
        pathType: Prefix
        backend:
          service:
            name: apdev-stress-svc
            port:
              number: 8080
      - path: /healthcheck
        pathType: ImplementationSpecific
        backend:
          service:
            name: response-403
            port:
              name: use-annotation
  defaultBackend:
      service:
        name: response-404
        port:
          name: use-annotation
